# ddae

./: Cargo.toml  LICENSE  README.md
src/: battery.rs  lib.rs  main.rs  network.rs  pipewire.rs  pulseaudio.rs
src/network_manager/: active_connection.rs  mod.rs
src/network_manager/device/: bluetooth.rs  device.rs  mod.rs  wired.rs  wireless.rs
src/network_manager/settings/: connection.rs  mod.rs
src/upower/: device.rs  kbd_backlight.rs  mod.rs  upower.rs
